# ollama-libraries-example

./: README.md
python/: app.py  pyproject.toml
